# alpha-nextgen-v2-private

./: .editorconfig  .gitignore  .leanignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ERRORS.md  Makefile  PROCESS.md  PROJECT-STRUCTURE.md  QC_RULES.md  QUICKSTART.md  README.md  V2_IMPLEMENTATION_ROADMAP.md  WORKBOARD.md  config.py  developer-guide-claude.md  main.py  main_bootstrap_mixin.py  main_intraday_close_mixin.py  main_market_close_mixin.py  main_minified.py  main_observability_mixin.py  main_options_mixin.py  main_orders_mixin.py  main_premarket_mixin.py  main_reconcile_mixin.py  main_regime_mixin.py  main_risk_monitor_mixin.py  main_signal_generation_mixin.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: config.json
.claude/agents/: .options-audit-lead.md.swp  backtest-runner.md  backtest-workflow.md  docs-sync.md  ic-backtest-workflow.md  log-analyzer.md  trade-analyzer.md  v3-pre-live-auditor.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
data/: data_validator.py  indicator_manager.py  symbol_manager.py  vix_regime.py
docs/: 00-table-of-contents.md  02-system-architecture.md  03-data-infrastructure.md  07-trend-engine.md  08-mean-reversion-engine.md  09-hedge-engine.md  10-yield-sleeve.md  11-portfolio-router.md  12-risk-engine.md  14-daily-operations.md  15-state-persistence.md  16-appendix-parameters.md  17-appendix-glossary.md  18-options-engine.md  BACKTEST_RESULTS_2026-01-25.md  BACKTEST_WORKFLOW.md  DOCUMENTATION-MAP.md  GITHUB-BRANCH-PROTECTION.md  MAIN_PY_IMPLEMENTATION.md  OPTIMIZATION_GUIDE.md  README.md  REFACTOR_PROMPT.md  REPORTING_PLAN.md  V2_1_READINESS_AUDIT.md  V2_26_IMPLEMENTATION_PLAN.md  V2_TEST_PLAN.md
engines/: __init__.py
execution/: execution_engine.py  fill_handler.py  oco_manager.py  order_manager.py
models/: capital_state.py  enums.py  position_state.py  regime_state.py  target_weight.py
persistence/: serializers.py  state_manager.py  state_validator.py
policy/: checklist.yaml
portfolio/: exposure_groups.py  portfolio_router.py  position_manager.py
scheduling/: daily_scheduler.py  time_guards.py
scripts/: analyze.sh  analyze_choked_signals.py  analyze_exit_reasons.py  analyze_micro_2023.py  analyze_micro_2024.py  analyze_micro_v98.py  analyze_micro_v98_v2.py  analyze_rr_v10.py  analyze_rr_v10_v2.py  analyze_rr_v10_v3.py  analyze_trades_v10_11.py  build_trade_report.py  check_spec_parity.py  debug_keys.py  debug_spread_dict.py  exit_reason_mapper.py  fix_exit_matching.py  fix_reason_regex.py  gate.sh  gen_trade_detail_report.py  gen_v10_1_full_report.py  generate_run_reports.py  generate_trade_detail_report.py  generate_v10_1_trade_detail_report.py  itm_momentum_sim.py  minify_workspace.py  objectstore_schema.md  parse_objectstore_trades.py  pre_qc_checklist.py  pull_logs.sh  pull_objectstore.py  qc_audit_agent.py  qc_backtest.sh  qc_pull_backtest.py  qc_push_individual.py  qc_research_objectstore_loader.py  rca_stage10_bull.py  refactor_gate.sh  rr_analysis.py  run_backtest.sh  (+16 more)
templates/: commit_message.md  handoff.md
tests/: conftest.py  test_architecture_boundaries.py  test_calculations.py  test_capital_engine.py  test_cold_start_engine.py  test_daily_scheduler.py  test_data_helpers.py  test_execution_engine.py  test_exit_reason_mapper.py  test_exposure_groups.py  test_hedge_engine.py  test_iron_condor_engine.py  test_itm_horizon_engine.py  test_log_budget.py  test_log_budget_checkpoint.py  test_mean_reversion_engine.py  test_micro_entry_engine.py  test_micro_regime_engine.py  test_monthly_pnl_tracker.py  test_observability_router_artifact.py  test_oco_manager.py  test_options_engine.py  test_plumbing_regressions.py  test_portfolio_router.py  test_regime_engine.py  test_risk_engine.py  test_smoke_integration.py  test_state_persistence.py  test_target_weight_contract.py  test_trend_engine.py  test_v12_30_regressions.py  test_v211_enums.py  test_vass_entry_engine.py  test_vix_regime.py  test_yield_sleeve.py
utils/: calculations.py  constants.py  daily_summary_logger.py  logging_utils.py  monthly_pnl_tracker.py
(+278 files in other folders)
