# =============================================================================
# Alpha NextGen - Project Configuration
# =============================================================================
# This file centralizes tool configuration for the project.
# Python version: 3.11
# =============================================================================

[project]
name = "alpha-nextgen"
version = "0.1.0"
description = "Multi-strategy algorithmic trading system for QuantConnect"
requires-python = ">=3.11"
readme = "README.md"

# =============================================================================
# pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers for selective test running
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "architecture: marks architecture enforcement tests",
    "contract: marks contract/golden payload tests",
    "smoke: marks smoke integration tests",
    "scenario: marks end-to-end scenario tests",
]

# Test output settings
addopts = [
    "-v",
    "--tb=short",
    "-ra",  # Show summary of all except passed
]

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Black Configuration (Code Formatter)
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | archive
    | \.lean
)/
'''

# =============================================================================
# isort Configuration (Import Sorter)
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".venv", "venv", "__pycache__", "archive"]
known_first_party = ["engines", "portfolio", "execution", "models", "persistence", "scheduling", "utils", "data"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# =============================================================================
# mypy Configuration (Type Checker)
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "archive",
    "tests",
]

# Per-module settings
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["engines", "portfolio", "execution", "models", "persistence", "scheduling", "utils"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/archive/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
show_missing = true

# =============================================================================
# Ruff Configuration (Fast Linter - Optional)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "archive",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]
